--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@ function generateReportFunc(){
 
     let html = `
       <div style="text-align:center; margin-bottom:20px;">
-        <h1 style="text-align:center;"><img src="logo.png.png" alt="" width="35" height="35">POLIKLINIKA BIOENG</h1>
+        <h1 style="text-align:center;"><img src="logo.png" alt="" width="35" height="35">POLIKLINIKA BIOENG</h1>
         <h2>Raporti laboratorik</h2>
       </div>
       <p>Rruga Sadullah Bresovci nr. 100 Gjilan tel: 044369264</p>
@@ -1080,4 +1080,5 @@ downloadPDF.addEventListener('click', () => {
 
 </body>
 </html>
+
 
